package Exceptions;

public class VehiculoAlquiladoException extends RuntimeException{
    public VehiculoAlquiladoException(String mensaje) {
        super(mensaje);
    }    
}
