package Exceptions;


public class PatenteRepetidaException  extends RuntimeException{
    public PatenteRepetidaException(String mensaje) {
        super(mensaje);
    }
}
